--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     margin: 0;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
+    min-width: 400px;
 }
 
 input {
@@ -20,7 +21,31 @@ button {
     padding: 10px 20px;
     background-color: var(--bg-color);
     color: var(--text-color);
-    border: none;
+    border: 1px solid var(--bg-color);
     font-weight: bold;
     margin-top: 4px;
+}
+
+ul {
+    margin-top: 20px;
+    list-style: none;
+    padding-left: 0;
+}
+
+li {
+    margin-top: 5px;
+}
+
+a {
+    color: var(--bg-color);
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+#delete-btn {
+    color: var(--bg-color);
+    background-color: white;
 }
